# vision_cli

./: .env  .gitignore  ANALISE_COMPLETA.md  ANALISE_PROFUNDA_CODIGO.md  COMPARACAO_CLIS.md  IMPLEMENTACAO_CONCLUIDA.md  PLANO_DE_ACAO_COMPLETO.md  PLANO_DE_ACAO_GERALZAO.md  PLANO_IMPLEMENTACAO.md  PROBLEMAS_MAPEADOS.md  PROXIMOS_PASSOS.md  README.md  README_INICIAR.md  REFACT_PROGRESS.md  STATUS_IMPLEMENTACAO.md  agent.py  config.py  iniciar.bat  input_queue.py  main.py  melhorias.txt  pyproject.toml  session.py  tools.py  ui.py  vision.bat  vite.config.js
skills/: api.md  debug.md  react.md  refactor.md  scraper.md
src/commands/: __init__.py  slash.py
src/components/: Header.css  Header.tsx  ProductCard.css  ProductCard.tsx  ProductListContainer.tsx
src/config/: __init__.py
src/core/: __init__.py  analyzer.py  context_summarizer.py  executor.py  fallback_parser.py  filesystem_context.py  llm.py  logger.py  session_manager.py  system_prompt.py  tool_validator.py
src/data/: products.json
src/pages/: HomePage.tsx
src/session/: __init__.py  store.py
src/skills/: __init__.py  manager.py
src/tools/: __init__.py  base.py  filesystem.py  navigation.py  shell.py  utility.py  web.py
src/ui/: __init__.py  approvals.py  completers.py  input_box.py  modes.py  output.py  stream_display.py  theme.py  (+1 more)
tests/: test_integration.py  test_tools.py
vision_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
visionsx/: index.html  package-lock.json  package.json
ze-da-rosquinha-app/: index.html  package-lock.json  package.json
(+20 files in other folders)
