[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-cli"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "openai>=1.0.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vision = "main:main"

[tool.setuptools]
py-modules = ["main", "agent", "ui", "input_queue", "config", "session", "tools"]

[tool.setuptools.packages.find]
include = ["src*"]
